@@ -1,13 +1,14 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.fs;
 
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.Key;
 import com.intellij.util.SmartList;
-import com.intellij.util.containers.FastUtilHashingStrategies;
+import com.intellij.util.containers.FileHashStrategy;
 import com.intellij.util.containers.MultiMap;
 import com.intellij.util.io.IOUtil;
 import it.unimi.dsi.fastutil.objects.Object2LongOpenCustomHashMap;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.jps.ModuleChunk;
@@ -21,6 +22,7 @@ import java.io.DataInputStream;
 import java.io.DataOutput;
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.*;
 
 /**
@@ -38,7 +40,7 @@ public final class BuildFSState {
   private final boolean myAlwaysScanFS;
   private final Set<BuildTarget<?>> myInitialScanPerformed = Collections.synchronizedSet(new HashSet<>());
   @SuppressWarnings("SSBasedInspection")
-  private final Object2LongOpenCustomHashMap<File> myRegistrationStamps = new Object2LongOpenCustomHashMap<>(FastUtilHashingStrategies.FILE_HASH_STRATEGY);
+  private final Object2LongOpenCustomHashMap<File> myRegistrationStamps = new Object2LongOpenCustomHashMap<>(FileHashStrategy.INSTANCE);
   private final Map<BuildTarget<?>, FilesDelta> myDeltas = Collections.synchronizedMap(new HashMap<>());
 
   public BuildFSState(boolean alwaysScanFS) {
@@ -165,10 +167,10 @@ public final class BuildFSState {
   public void registerDeleted(@Nullable CompileContext context,
                               BuildTarget<?> target,
                               File file,
-                              @Nullable StampsStorage<? extends StampsStorage.Stamp> stampStorage) throws IOException {
+                              @Nullable StampsStorage<?> stampStorage) throws IOException {
     registerDeleted(context, target, file);
     if (stampStorage != null) {
-      stampStorage.removeStamp(file, target);
+      stampStorage.removeStamp(file.toPath(), target);
     }
   }
 
@@ -192,21 +194,13 @@ public final class BuildFSState {
   }
 
   public Collection<String> getAndClearDeletedPaths(BuildTarget<?> target) {
-    final FilesDelta delta = myDeltas.get(target);
-    if (delta != null) {
-      return delta.getAndClearDeletedPaths();
-    }
-    return Collections.emptyList();
+    FilesDelta delta = myDeltas.get(target);
+    return delta == null ? List.of() : delta.getAndClearDeletedPaths();
   }
 
   private @NotNull FilesDelta getDelta(BuildTarget<?> buildTarget) {
     synchronized (myDeltas) {
-      FilesDelta delta = myDeltas.get(buildTarget);
-      if (delta == null) {
-        delta = new FilesDelta();
-        myDeltas.put(buildTarget, delta);
-      }
-      return delta;
+      return myDeltas.computeIfAbsent(buildTarget, __ -> new FilesDelta());
     }
   }
 
@@ -215,6 +209,7 @@ public final class BuildFSState {
     return !myAlwaysScanFS && myInitialScanPerformed.contains(target);
   }
 
+  @ApiStatus.Internal
   public @NotNull FilesDelta getEffectiveFilesDelta(@NotNull CompileContext context, BuildTarget<?> target) {
     if (target instanceof ModuleBuildTarget) {
       // multiple compilation rounds are applicable to ModuleBuildTarget only
@@ -240,30 +235,30 @@ public final class BuildFSState {
    */
   public boolean markDirty(@Nullable CompileContext context,
                            File file,
-                           final BuildRootDescriptor rd,
-                           @Nullable StampsStorage<? extends StampsStorage.Stamp> stampStorage,
+                           BuildRootDescriptor buildRootDescriptor,
+                           @Nullable StampsStorage<?> stampStorage,
                            boolean saveEventStamp) throws IOException {
-    return markDirty(context, CompilationRound.NEXT, file, rd, stampStorage, saveEventStamp);
+    return markDirty(context, CompilationRound.NEXT, file, buildRootDescriptor, stampStorage, saveEventStamp);
   }
 
   public boolean markDirty(@Nullable CompileContext context,
                            CompilationRound round,
                            File file,
-                           final BuildRootDescriptor rd,
-                           @Nullable StampsStorage<? extends StampsStorage.Stamp> stampStorage,
+                           @NotNull BuildRootDescriptor buildRootDescriptor,
+                           @Nullable StampsStorage<?> stampStorage,
                            boolean saveEventStamp) throws IOException {
     final FilesDelta roundDelta = getRoundDelta(round == CompilationRound.NEXT? NEXT_ROUND_DELTA_KEY : CURRENT_ROUND_DELTA_KEY, context);
-    if (roundDelta != null && isInCurrentContextTargets(context, rd)) {
-      roundDelta.markRecompile(rd, file);
+    if (roundDelta != null && isInCurrentContextTargets(context, buildRootDescriptor)) {
+      roundDelta.markRecompile(buildRootDescriptor, file);
     }
 
-    final FilesDelta filesDelta = getDelta(rd.getTarget());
+    final FilesDelta filesDelta = getDelta(buildRootDescriptor.getTarget());
     filesDelta.lockData();
     try {
-      final boolean marked = filesDelta.markRecompile(rd, file);
+      final boolean marked = filesDelta.markRecompile(buildRootDescriptor, file);
       if (marked) {
         if (LOG.isDebugEnabled()) {
-          LOG.debug(rd.getTarget() + ": MARKED DIRTY: " + file.getPath());
+          LOG.debug(buildRootDescriptor.getTarget() + ": MARKED DIRTY: " + file.getPath());
         }
         if (saveEventStamp) {
           final long eventStamp = System.currentTimeMillis();
@@ -272,12 +267,12 @@ public final class BuildFSState {
           }
         }
         if (stampStorage != null) {
-          stampStorage.removeStamp(file, rd.getTarget());
+          stampStorage.removeStamp(file.toPath(), buildRootDescriptor.getTarget());
         }
       }
       else {
         if (LOG.isDebugEnabled()) {
-          LOG.debug(rd.getTarget() + ": NOT MARKED DIRTY: " + file.getPath());
+          LOG.debug(buildRootDescriptor.getTarget() + ": NOT MARKED DIRTY: " + file.getPath());
         }
       }
       return marked;
@@ -299,10 +294,10 @@ public final class BuildFSState {
                                        CompilationRound round,
                                        File file,
                                        final BuildRootDescriptor rd,
-                                       @Nullable StampsStorage<? extends StampsStorage.Stamp> stampStorage) throws IOException {
+                                       @Nullable StampsStorage<?> stampStorage) throws IOException {
     final boolean marked = getDelta(rd.getTarget()).markRecompileIfNotDeleted(rd, file);
     if (marked && stampStorage != null) {
-      stampStorage.removeStamp(file, rd.getTarget());
+      stampStorage.removeStamp(file.toPath(), rd.getTarget());
     }
     if (marked) {
       final FilesDelta roundDelta = getRoundDelta(round == CompilationRound.NEXT? NEXT_ROUND_DELTA_KEY : CURRENT_ROUND_DELTA_KEY, context);
@@ -384,43 +379,49 @@ public final class BuildFSState {
   /**
    * @return true if marked something, false otherwise
    */
-  public boolean markAllUpToDate(CompileContext context, final BuildRootDescriptor rd, final StampsStorage stampsStorage) throws IOException {
+  public boolean markAllUpToDate(@NotNull CompileContext context,
+                                 @NotNull BuildRootDescriptor buildRootDescriptor,
+                                 @Nullable StampsStorage<?> stampStorage,
+                                 long targetBuildStartStamp) throws IOException {
     boolean marked = false;
-    final BuildTarget<?> target = rd.getTarget();
+    final BuildTarget<?> target = buildRootDescriptor.getTarget();
     final FilesDelta delta = getDelta(target);
-    final long targetBuildStartStamp = context.getCompilationStartStamp(target);
     // prevent modifications to the data structure from external FS events
     delta.lockData();
     try {
-      final Set<File> files = delta.clearRecompile(rd);
-      if (files != null) {
-        CompileScope scope = context.getScope();
-        for (File file : files) {
-          if (scope.isAffected(target, file)) {
-            final long currentFileTimestamp = FSOperations.lastModified(file);
-            StampsStorage.Stamp stamp = stampsStorage.getCurrentStamp(file);
-            if (!rd.isGenerated() && (currentFileTimestamp > targetBuildStartStamp || getEventRegistrationStamp(file) > targetBuildStartStamp)) {
-              // if the file was modified after the compilation had started,
-              // do not save the stamp considering file dirty
-              // Important!
-              // Event registration stamp check is essential for the files that were actually changed _before_ targetBuildStart,
-              // but corresponding change event was received and processed _after_ targetBuildStart
-              if (Utils.IS_TEST_MODE) {
-                LOG.info("Timestamp after compilation started; marking dirty again: " + file.getPath());
-              }
-              delta.markRecompile(rd, file);
+      Set<File> files = delta.clearRecompile(buildRootDescriptor);
+      if (files == null) {
+        return marked;
+      }
+
+      CompileScope scope = context.getScope();
+      for (File file : files) {
+        if (scope.isAffected(target, file)) {
+          Path nioFile = file.toPath();
+          long currentFileTimestamp = FSOperations.lastModified(nioFile);
+          if (!buildRootDescriptor.isGenerated() && (currentFileTimestamp > targetBuildStartStamp || getEventRegistrationStamp(file) > targetBuildStartStamp)) {
+            // if the file was modified after the compilation had started,
+            // do not save the stamp considering a file dirty
+            // Important!
+            // Event registration stamp check is essential for the files that were actually changed _before_ targetBuildStart,
+            // but the corresponding change event was received and processed _after_ targetBuildStart
+            if (Utils.IS_TEST_MODE) {
+              LOG.info("Timestamp after compilation started; marking dirty again: " + file.getPath());
             }
-            else {
-              marked = true;
-              stampsStorage.saveStamp(file, target, stamp); // todo: ask jeka
-            }
+            delta.markRecompile(buildRootDescriptor, file);
           }
           else {
-            if (Utils.IS_TEST_MODE) {
-              LOG.info("Not affected by compile scope; marking dirty again: " + file.getPath());
+            marked = true;
+            if (stampStorage != null) {
+              stampStorage.updateStamp(nioFile, target, currentFileTimestamp);
             }
-            delta.markRecompile(rd, file);
           }
+        }
+        else {
+          if (Utils.IS_TEST_MODE) {
+            LOG.info("Not affected by compile scope; marking dirty again: " + file.getPath());
+          }
+          delta.markRecompile(buildRootDescriptor, file);
         }
       }
       return marked;
@@ -445,5 +446,4 @@ public final class BuildFSState {
       key.set(context, delta);
     }
   }
-
 }
